--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
   }
 
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 240 3% 10%;
     --foreground: 0 0% 98%;
 
     --card: 240 10% 3.9%;
@@ -73,4 +73,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.bg-anime-girl {
+  background-image: url("@/assets/anime-girl.png");
 }
